[package]
name = "subwallet"
version = "0.1.0"
authors = ["yxf <yxf4559@gmail.com>"]
edition = "2018"


[dependencies]
clap = "2.33.0"
rustbreak = { version = "2.0.0-rc3", features=["bin_enc"] }
serde = { version = "1.0", features = ["derive"] }
tiny-bip39 = "0.7"
serde_json = { version = "1.0" }
rpassword = "4.0.1"
hex = "0.4.0"
rand = "0.7.2"
dirs = "2.0"

sodalite = "0.3.0"
tweetnacl = "0.2.1"
schnorrkel = { version = "0.9.1", features = ["preaudit_deprecated", "u64_backend"], default-features = false }
sp-core = { version = "2.0.0-rc2" }


blake2-rfc = { version = "0.2.18" }